# jg-garmin-to-sheets

./: .env.example  .gitignore  Dockerfile  Product Requirements.md  README.md  com.garmingo.sync.plist  generate_token.py  pyproject.toml  requirements.txt  run_garmingo.sh
.claude/: settings.local.json
garmingo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
output/: garmingo_USER1.csv
src/: config.py  exceptions.py  garmin_client.py  main.py  parser.py  sheets_client.py
src/garmingo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
