[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "garmingo"
version = "0.1.0"
authors = [
  { name="Your Name", email="you@example.com" },
]
description = "A tool to sync Garmin data to Google Sheets or CSV."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = { file = "LICENSE.md" }
dependencies = [
    "garminconnect==0.2.26",
    "garth==0.5.3",
    "google-api-python-client>=2.0.0",
    "google-auth-httplib2>=0.1.0",
    "google-auth-oauthlib>=0.4.6",
    "pandas>=1.3.0",
    "python-dotenv>=0.19.0",
    "typer>=0.4.0",
]

[project.scripts]
garmingo = "src.main:main"

[tool.setuptools]
packages = ["src"]
